# micr-ocr

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  package.json  pyproject.toml  wrangler.jsonc
app/: decode.py  localize.py  main.py  recognizer.py
app/models/: crnn.py
app/synth/: __init__.py  check.py  config.py  dataset.py  degrade.py  glyphs.py  micr.py  render.py
assets/real_samples/: PROVENANCE.md
docs/: blog.md
eval/: baselines.py  benchmark.py  calibration.py  detect_eval.py  evaluate.py  make_demo_samples.py  metrics.py  torch_recognizer.py
models/: benchmark_heldout.json  benchmark_test.json  calibration.json
samples/: index.json
src/: index.ts
tests/: test_baselines.py  test_decode.py  test_glyphs_render.py  test_localize.py  test_micr.py  test_pipeline.py
train/: data.py  export_crnn_onnx.py  train_crnn.py
train/yolo/: export_onnx.py  make_yolo_data.py  train_yolo.py
